fix(tx): right align amounts in simple tab (#409)
This was broken by #390. This issue only showed up if the amount is for an issued currency where the currency part was longer than the value.

--- a/src/containers/Transactions/simpleTab.scss
+++ b/src/containers/Transactions/simpleTab.scss
@@ -22,6 +22,14 @@ $subdued-color: $gray-400;
 
     .row {
       .value {
+        .amount {
+          text-align: right;
+
+          .amount-localized {
+            display: block;
+          }
+        }
+
         .currency {
           display: block;
           margin: -1px 0px -16px;
